lang.java.statics.test/tests/negative/packages/single-type-import-of-package-not-allowed.no.javtest
STATIX fail java\.names\.member-type-name.*\"r\"
JAVAC  fail cannot find symbol

[p] {

    [A]
    package p;
    import q.r;
    public class A {}

}

[q] {
    [r] {

        [B]
        package q.r;
        public class B {}

    }
}
